# debezium-fabric-mirror

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  table_config.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md
docs/decisions/: 001-container-apps-over-functions.md  002-upsert-over-update.md  003-last-update-time-file-detection.md  004-auto-discover-tables-from-ddl.md  005-default-azure-credential.md  006-drop-rename-for-direct-upload.md  007-event-buffer-flush-thresholds.md  008-flush-on-empty-batches.md
docs/design/: debezium-event-format.md  open-mirroring-landing-zone.md  type-mapping.md
docs/runbooks/: local-dev-setup.md
docs/sources/: oracle.md
infra/: main.bicep
src/open_mirroring_debezium/: __init__.py  config.py  consumer.py  debezium_parser.py  event_buffer.py  logging_config.py  onelake_writer.py  parquet_writer.py
tests/: conftest.py  test_debezium_parser.py  test_event_buffer.py  test_logging_config.py  test_onelake_writer.py  test_parquet_writer.py
tests/sample_events/: oracle_ddl.json  oracle_delete.json  oracle_insert.json  oracle_snapshot.json  oracle_update.json
